fix: no dark mode

--- a/style.css
+++ b/style.css
@@ -31,12 +31,9 @@ html, body {
   transition: background-color 1.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 }
 .offline.inverted {
-  background-color: #000;
-  filter: invert(1);
 }
 
 .offline.inverted body {
-  background-color: #fff;
 }
 
 .offline .interstitial-wrapper {
@@ -118,29 +115,6 @@ html, body {
   transform-origin: top center;
   transition: transform 250ms cubic-bezier(0.4, 0, 1, 1) 400ms;
   z-index: 2;
-}
-
-
-@media (prefers-color-scheme: dark) {
-	
-  body {
-	background-color: #000;
-  }
-
-  .offline .runner-canvas {
-    filter: invert(1);
-  }
-
-  .offline.inverted {
-    background-color: #fff;
-    filter: invert(1);
-  }
-
-  .offline.inverted body {
-    background-color: #fff;
-  }
-
-  h1{filter: invert(1);}
 }
 
 @media (max-width: 420px) {
